# lifes_end_web

./: Cargo.toml  README.md  build_web.sh  index.html
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  states.rs
src/components/: combat.rs  common.rs  gol.rs  mod.rs  player.rs  tail.rs
src/plugins/: camera.rs  collision.rs  combat.rs  gol.rs  level.rs  mod.rs  player.rs  tail.rs  ui.rs
src/resources/: game_config.rs  gol_grid.rs  level_config.rs  mod.rs  random.rs
src/systems/: mod.rs
